# bike_Taxi

./: .dockerignore  .env  .gitignore  01_Data_Engineering.ipynb  02_model_ml_tracking.ipynb  Dockerfile  README.md  app.py  app_2.py  baseline_preds.csv  docker-compose.yml  latest_predictions.parquet  lgbm_preds.csv  mean_hour_lookup.csv  pyproject.toml  reduced_preds.csv  requirements.txt  requirements_1.txt  sample.ipynb  sample_2.ipynb
.github/workflows/: feature_engineering.yml  inference.yml  model_training.yml
env/conda-meta/: history
env/etc/: aau_token
frontend/: app.py  monitoring_app.py  monthly_insights.py  streamlit_app.py
frontend_new/: .gitignore  check-s3.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend_new/src/app/: globals.css  layout.js  page.js
frontend_new/src/app/api/model-metrics/: route.js
frontend_new/src/app/api/monthly/: route.js
frontend_new/src/app/api/predictions/: route.js
frontend_new/src/app/monthly/: page.js
frontend_new/src/components/: DemandAreaChart.js  DonutChart.js  DurationChart.js  HBarChart.js  LeafletMap.js  MetricCard.js  Navbar.js  StationMap.js  TripDensityChart.js  _LeafletMapInner.js
frontend_new/src/hooks/: useAutoRefresh.js  useCountUp.js
model_lags/: MLmodel  conda.yaml  requirements.txt
notebooks/: 01_Data_Engineering.ipynb  02_model_ml_tracking.ipynb  03_Monthly_Analysis.ipynb
scripts/: feature_engineering.py  inference.py  train_model.py
