[project]
name = "bike-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.4,<2.0.0",
    "scikit-learn>=1.6.1",
    "lightgbm>=4.6.0",
    "pyarrow>=19.0.1",
    "scipy>=1.15.3",
    "mlflow>=2.22.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "boto3>=1.38.13",
    "tqdm>=4.67.1",
    "hopsworks[python]>=4.2.2",
    "pydantic>=2.0.0",
    "joblib>=1.3.2",
    "streamlit",
    "altair",
    "matplotlib>=3.10.3",
    "pytz",
    "python-dateutil",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "pip>=26.0.1",
]

[dependency-groups]
dev = []
